--- a/integer_programming/makefile
+++ b/integer_programming/makefile
@@ -1,2 +1,5 @@
 all: model 
-	g++  model.cpp -o model -I/$GUROBI_HOME/include -L/$GUROBI_HOME/lib -lgurobi_c++ -lgurobi75
+	g++  model.cpp -o model -I${GUROBI_HOME}/include -L${GUROBI_HOME}/lib -lgurobi_c++ -lgurobi75
+
+clean:
+	rm -f model
